--- a/vistas/privado/marcas.html
+++ b/vistas/privado/marcas.html
@@ -29,6 +29,7 @@
     <div id="slide"></div>
     <main id="mainContent">
         <div class="ContenedorT">
+
             <div class="ContenedorTitulo position-relative">
                 <h3 class="titillium-web-semibold textP"> Marcas </h3>
                 <div class="linea1"></div>
@@ -61,41 +62,46 @@
                             class="ContenedorTotalA d-flex flex-column justify-content-around align-items-center flex-wrap">
 
                             <div class="contenedorDatos d-flex flex-column align-items-center">
-                                <h1 class="text-white titillium-web-regular text25 text-white mt-3 mb-4">Ingreso de
+                                <h1 class="text-white titillium-web-regular text25 text-white mt-3 mb-3">Ingreso de
                                     datos
                                 </h1>
                                 <div class="col-md-12 col-lg-12 col-sm-6 mb-4">
-                                    <label for="nombreMarca" class="form-label text-white">Nombre de la marca</label>
+                                    <label for="nombreMarca" class="form-label text-white text18">Nombre de la
+                                        marca</label>
                                     <input type="text" class="form-control" id="nombreMarca"
                                         placeholder="Ingresa el nombre" required>
                                 </div>
                                 <div class="input-group">
                                     <span class="input-group-text">Descripciòn de la marca</span>
-                                    <textarea class="form-control" aria-label="With textarea"></textarea>
+                                    <textarea class="form-control" aria-label="With textarea"
+                                        id="descripcionMarca"></textarea>
                                 </div>
                             </div>
+
                             <div class="contenedorImagen d-flex flex-column align-items-center">
                                 <h1 class="text-white titillium-web-regular text25 text-white mt-3">Foto de la marca
                                 </h1>
 
-                                <img id="selectedImage" width="300px" height="300px"
+                                <img id="selectedImage" style="width: 15rem; height: 15rem; border-radius: 10px;"
                                     src="https://mdbootstrap.com/img/Photos/Others/placeholder.jpg"
-                                    alt="example placeholder" class="col-md-6 col-lg-6 col-sm-6" />
+                                    alt="example placeholder" />
 
-                                <div class="">
-                                    <div class="btn btn-primary btn-rounded mt-3">
-                                        <label class="form-label text-white m-1" for="customFile1">Seleccionar
-                                            imagen</label>
-                                        <input type="file" class="form-control d-none" id="customFile1"
-                                            onchange="displaySelectedImage(event, 'selectedImage')" />
-                                    </div>
-                                </div>
-                                <div class="contenedorBotones z-0 mt-3 mb-3">
-                                    <button type="button"
-                                        class="btn btn2 btn-primary shadow text18 titillium-web-regular">Guardar</button>
+                                <div class="btn btn-primary btn-rounded mt-3">
+                                    <label class="form-label text-white m-1" for="customFile1">Seleccionar
+                                        imagen</label>
+                                    <input type="file" class="form-control d-none" id="customFile1"
+                                        onchange="displaySelectedImage(event, 'selectedImage')" />
                                 </div>
                             </div>
+
+                            <div class="contenedorBotones z-0 mt-5 mb-5">
+                                <button type="button" onclick="returnBack()"
+                                    class="btn btn2 btn-primary ms-2 shadow text18 titillium-web-regular">Cancelar</button>
+                                <button class="btn btn3 btn-primary shadow ms-5 text18 titillium-web-regular"
+                                    id="btnUpdate" onclick="addSave()" type="button">Guardar</button>
+                            </div>
                         </div>
+
                     </div>
 
                     <div class="tab-pane1 fade z-2 position-relative d-none" role="tabpanel" id="marcas"
@@ -103,23 +109,24 @@
                         <div class="d-flex flex-column mb-3 justify-content-center flex-wrap">
                             <div class="cardContainer d-flex flex-row justify-content-around m-5 flex-wrap">
                                 <div class="card" style="width: 15rem; height: 15rem;" ondblclick="openDetails()">
-                                    <img src="/recursos/imagenes/marcas/adidas.svg" class="card-img-top"  />                          
-                                </div>
-                                <div class="card" style="width: 15rem; height: 15rem;"  ondblclick="openDetails()" >
-                                    <img src="/recursos/imagenes/marcas/adidas.svg" class="card-img-top"/>  
-                                </div>
-                                <div class="card" style="width: 15rem; height: 15rem;" ondblclick="openDetails()" >
-                                    <img src="/recursos/imagenes/marcas/adidas.svg" class="card-img-top"/>  
-                                </div>
-                                <div class="card" style="width: 15rem; height: 15rem;" ondblclick="openDetails()" >
-                                    <img src="/recursos/imagenes/marcas/adidas.svg" class="card-img-top"/>  
+                                    <img src="/recursos/imagenes/marcas/adidas.svg" class="card-img-top" />
                                 </div>
                                 <div class="card" style="width: 15rem; height: 15rem;" ondblclick="openDetails()">
-                                    <img src="/recursos/imagenes/marcas/adidas.svg" class="card-img-top" />  
+                                    <img src="/recursos/imagenes/marcas/adidas.svg" class="card-img-top" />
+                                </div>
+                                <div class="card" style="width: 15rem; height: 15rem;" ondblclick="openDetails()">
+                                    <img src="/recursos/imagenes/marcas/adidas.svg" class="card-img-top" />
+                                </div>
+                                <div class="card" style="width: 15rem; height: 15rem;" ondblclick="openDetails()">
+                                    <img src="/recursos/imagenes/marcas/adidas.svg" class="card-img-top" />
+                                </div>
+                                <div class="card" style="width: 15rem; height: 15rem;" ondblclick="openDetails()">
+                                    <img src="/recursos/imagenes/marcas/adidas.svg" class="card-img-top" />
                                 </div>
                             </div>
                         </div>
                     </div>
+
                 </div>
             </div>
         </div>
@@ -133,32 +140,50 @@
                     </div>
                     <!-- Formulario para crear o actualizar un registro -->
                     <form id="updateFrom" name="updateFrom">
-                        <div class="modal-body row g-3">
+                        <div class="modal-body row g-3 d-flex flex-column align-items-center">
                             <!-- Campo oculto para asignar el id del registro al momento de modificar
-                            <input type="hidden" id="idTrabajador" name="IdTrabajador"> -->
-                            <div class="col-sm-12 col-md-6">
-                                <label for="nombreMarcaD" class="form-label">Nombre Marca</label>
-                                <input id="nombreMarcaD" type="text" name="nombreMarcaD"
-                                    class="form-control editableInput" required disabled>
+                        <input type="hidden" id="idTrabajador" name="IdTrabajador"> -->
+                            <div class="col-sm-12 col-md-12">
+                                <label for="nombreMarcaD" class="form-label">Nombres</label>
+                                <input id="nombreMarcaD" type="text" name="nombreTrabajador"
+                                    class="form-control editableInput" required readonly>
                             </div>
-                            <div class="col-sm-12 col-md-6">
-                                <label for="fotoMarcaD" class="form-label">Foto Marca</label>
-                                <input id="fotoMarcaD" type="text" name="fotoMarcaD"
-                                    class="form-control editableInput" required disabled>
+
+                            <div class="input-group">
+                                <span class="input-group-text">Descripciòn de la marca</span>
+                                <textarea class="form-control" aria-label="With textarea" id="descripcionMarcaD"
+                                    readonly></textarea>
                             </div>
-                            <div class="col-sm-12 col-md-6">
-                                <label for="descripcionMarcaD" class="form-label">Descripciòn</label>
-                                <input id="descripcionMarcaD" type="text" name="descripcionMarcaD"
-                                    class="form-control editableInput" required disabled>
+
+                            <div class="contenedorImagen d-flex flex-column align-items-center">
+                                <h1 class="text-white titillium-web-regular text25 text-white mt-3">Foto de la marca
+                                </h1>
+
+                                <img id="selectedImageD" style="width: 15rem; height: 15rem; border-radius: 10px;"
+                                    src="https://mdbootstrap.com/img/Photos/Others/placeholder.jpg"
+                                    alt="example placeholder" />
+
+                                <div class="btn btn-primary btn-rounded mt-3">
+                                    <label class="form-label text-white m-1" for="customFile1">Seleccionar
+                                        imagen</label>
+                                    <input type="file" class="form-control d-none" id="customFile1" readonly
+                                        onchange="displaySelectedImage(event, 'selectedImageD')" />
+                                </div>
                             </div>
-                        </div>
-                        <div class="modal-footer mt-5">
-                            <div class="contenedorBotones3">
-                                <button type="button" data-bs-dismiss="modal"
-                                    class="btn btn3 btn-primary ms-2 shadow text18 titillium-web-regular"
-                                    > Regresar</button>
-                                <button class="btn btn3 btn-primary shadow ms-4 text18 titillium-web-regular"
-                                    type="button"  id="updatesave">Actualizar</button>
+
+                            <div class="modal-footer mt-5">
+                                <div -class="contenedorBotones3">
+                                    <button type="button" id="cancelarBtn"
+                                        class="btn btn2 btn-primary ms-4 shadow text18 titillium-web-regular"
+                                        onclick="botonCancelar()">
+                                        Cancelar
+                                    </button>
+                                    <button type="button" id="actualizarBtn"
+                                        class="btn btn3 btn-primary ms-4 shadow text18 titillium-web-regular"
+                                        onclick="botonActualizar()">
+                                        Actualizar
+                                    </button>
+                                </div>
                             </div>
                         </div>
                     </form>
@@ -168,12 +193,13 @@
     </main>
     <footer id="footer"></footer>
 
-    <script src="script.js"></script>
     <!-- *Llamada a las hojas de estilos del framework e iconos -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-
+    <!--*Libreria de mensajes-->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- *Llamada al controlador de la página web -->
     <script type="text/javascript" src="../../controlador/utilidades(plantillas)/privado.js"></script>
+    <script type="text/javascript" src="/controlador/utilidades(plantillas)/componentes.js"></script>
     <!-- *Llamada al controlador del sitio privado -->
     <script type="text/javascript" src="../../controlador/privado/marcas.js"></script>
 </body>
