--- a/vistas/publico/index.html
+++ b/vistas/publico/index.html
@@ -47,18 +47,114 @@ TODO importante // realtando algo
                 </div>
                 <div class="carruselA">
                     <div class="carousel-item active">
-                        <img src="../../recursos/imagenes/carrusel/sneakers1.svg" class="d-block w-100 opacity-50 imgC1">
+                        <img src="../../recursos/imagenes/carrusel/sneakers1.svg"
+                            class="d-block w-100 opacity-50 imgC1">
                     </div>
                     <div class="carousel-item">
-                        <img src="../../recursos/imagenes/carrusel/sneakers2.svg" class="d-block w-100 opacity-50 imgC1">
+                        <img src="../../recursos/imagenes/carrusel/sneakers2.svg"
+                            class="d-block w-100 opacity-50 imgC1">
                     </div>
                     <div class="carousel-item">
-                        <img src="../../recursos/imagenes/carrusel/sneakers3.svg" class="d-block w-100 opacity-50 imgC1">
+                        <img src="../../recursos/imagenes/carrusel/sneakers3.svg"
+                            class="d-block w-100 opacity-50 imgC1">
                     </div>
                 </div>
             </div>
         </div>
+
+        <!--*Carrusel de marcas-->
+        <div class="linea mt-5"></div>
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+
+                    <div class="cards-wrapper">
+
+                        <div class="card cardM">
+                            <div class="image-wrapper">
+                                <a href=""><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
+                            </div>
+                        </div>
+
+                        <div class="card cardM">
+                            <div class="image-wrapper">
+                                <a href=""><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
+                            </div>
+                        </div>
+
+                        <div class="card cardM">
+                            <div class="image-wrapper">
+                                <a href=""><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
+                            </div>
+                        </div>
+
+                        <div class="card cardM">
+                            <div class="image-wrapper">
+                                <a href=""><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
+                            </div>
+                        </div>
+
+                        <div class="card cardM">
+                            <div class="image-wrapper">
+                                <a href=""><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="carousel-item">
+                    <div class="cards-wrapper">
+
+                        <div class="card cardM">
+                            <div class="image-wrapper">
+                                <a href=""><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
+                            </div>
+                        </div>
+
+                        <div class="card cardM">
+                            <div class="image-wrapper">
+                                <a href=""><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
+                            </div>
+                        </div>
+
+                        <div class="card cardM">
+                            <div class="image-wrapper">
+                                <a href=""><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
+                            </div>
+                        </div>
+
+                        <div class="card cardM">
+                            <div class="image-wrapper">
+                                <a href=""><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
+                            </div>
+                        </div>
+
+                        <div class="card cardM">
+                            <div class="image-wrapper">
+                                <a href=""><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev a" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="prev">
+                <span class="carousel-control-previous" aria-hidden="true">
+                    <img src="../../recursos/imagenes/icons/slideizq.svg" alt="">
+                </span>
+            </button>
+            <button class="carousel-control-next  a" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="next">
+                <span class="carousel-control-next-" aria-hidden="true">
+                    <img src="../../recursos/imagenes/icons/slidedrch.svg" alt="">
+                </span>
+            </button>
+        </div>
+        <div class="linea mb-5"></div>
     </main>
+
+
 
     <!-- *Llamada a las hojas de estilos del framework e iconos -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
