--- a/vistas/publico/index.html
+++ b/vistas/publico/index.html
@@ -152,9 +152,244 @@ TODO importante // realtando algo
             </button>
         </div>
         <div class="linea mb-5"></div>
+
+        <!--*Slider de colección más reciente-->
+        <h1 class="titillium-web-regular text35 mx-5 text-black mt-3">Nuestra colección más reciente</h1>
+        <div class="containerCards d-flex flex-nowrap">
+            <div class="card col-4" id="cardC">
+                <a href="" class="text15">
+                    <div class="image-wrapper2">
+                        <img src="../../recursos/imagenes/sneakersExample.svg" alt="...">
+                    </div>
+                    <div class="lineImgC"></div>
+                    <div class="card-body">
+                        <div class="d-flex flex-row justify-content-between">
+                            <div class="column1 ps-3">
+                                <h1 class="titillium-web-bold text25 text-black">Air Jordan 3
+                                    <p class="titillium-web-extralight text18 clgr3 mt-2">Zapato UNISEX</p>
+                                </h1>
+
+                                <div class="d-flex flex-row align-items-center mt-2 ">
+                                    <img src="../../recursos/imagenes/icons/estrellaicon.svg" alt="">
+                                    <p class="titillium-web-bold text25 m-0 align-baselin clYellowStar">5</p>
+                                </div>
+                            </div>
+
+                            <div class="column2 align-items-center">
+                                <p class="titillium-web-extralight text18 mb-5 clgr3">5 colores</p>
+                                <h1 class="titillium-web-bold text25 text-black"> $285</h1>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+            <div class="card col-4" id="cardC">
+                <a href="" class="text15">
+                    <div class="image-wrapper2">
+                        <img src="../../recursos/imagenes/sneakersExample.svg" alt="...">
+                    </div>
+                    <div class="lineImgC"></div>
+                    <div class="card-body">
+                        <div class="d-flex flex-row justify-content-between">
+                            <div class="column1 ps-3">
+                                <h1 class="titillium-web-bold text25 text-black">Air Jordan 3
+                                    <p class="titillium-web-extralight text18 clgr3 mt-2">Zapato UNISEX</p>
+                                </h1>
+
+                                <div class="d-flex flex-row align-items-center mt-2 ">
+                                    <img src="../../recursos/imagenes/icons/estrellaicon.svg" alt="">
+                                    <p class="titillium-web-bold text25 m-0 align-baselin clYellowStar">5</p>
+                                </div>
+                            </div>
+
+                            <div class="column2 align-items-center">
+                                <p class="titillium-web-extralight text18 mb-5 clgr3">5 colores</p>
+                                <h1 class="titillium-web-bold text25 text-black"> $285</h1>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+            <div class="card col-4" id="cardC">
+                <a href="" class="text15">
+                    <div class="image-wrapper2">
+                        <img src="../../recursos/imagenes/sneakersExample.svg" alt="...">
+                    </div>
+                    <div class="lineImgC"></div>
+                    <div class="card-body">
+                        <div class="d-flex flex-row justify-content-between">
+                            <div class="column1 ps-3">
+                                <h1 class="titillium-web-bold text25 text-black">Air Jordan 3
+                                    <p class="titillium-web-extralight text18 clgr3 mt-2">Zapato UNISEX</p>
+                                </h1>
+
+                                <div class="d-flex flex-row align-items-center mt-2 ">
+                                    <img src="../../recursos/imagenes/icons/estrellaicon.svg" alt="">
+                                    <p class="titillium-web-bold text25 m-0 align-baselin clYellowStar">5</p>
+                                </div>
+                            </div>
+
+                            <div class="column2 align-items-center">
+                                <p class="titillium-web-extralight text18 mb-5 clgr3">5 colores</p>
+                                <h1 class="titillium-web-bold text25 text-black"> $285</h1>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+            <div class="card col-4" id="cardC">
+                <a href="" class="text15">
+                    <div class="image-wrapper2">
+                        <img src="../../recursos/imagenes/sneakersExample.svg" alt="...">
+                    </div>
+                    <div class="lineImgC"></div>
+                    <div class="card-body">
+                        <div class="d-flex flex-row justify-content-between">
+                            <div class="column1 ps-3">
+                                <h1 class="titillium-web-bold text25 text-black">Air Jordan 3
+                                    <p class="titillium-web-extralight text18 clgr3 mt-2">Zapato UNISEX</p>
+                                </h1>
+
+                                <div class="d-flex flex-row align-items-center mt-2 ">
+                                    <img src="../../recursos/imagenes/icons/estrellaicon.svg" alt="">
+                                    <p class="titillium-web-bold text25 m-0 align-baselin clYellowStar">5</p>
+                                </div>
+                            </div>
+
+                            <div class="column2 align-items-center">
+                                <p class="titillium-web-extralight text18 mb-5 clgr3">5 colores</p>
+                                <h1 class="titillium-web-bold text25 text-black"> $285</h1>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+        </div>
+        <div class="pb-3"></div>
+
+        <!--*Slider de seleccion especial-->
+        <h1 class="titillium-web-regular text35 mx-5 text-black mt-3">Selección especial de nuestro equipo</h1>
+        <div class="containerCards d-flex flex-nowrap">
+            <div class="card col-4" id="cardC">
+                <a href="" class="text15">
+                    <div class="image-wrapper2">
+                        <img src="../../recursos/imagenes/sneakersExample.svg" alt="...">
+                    </div>
+                    <div class="lineImgC"></div>
+                    <div class="card-body">
+                        <div class="d-flex flex-row justify-content-between">
+                            <div class="column1 ps-3">
+                                <h1 class="titillium-web-bold text25 text-black">Air Jordan 3
+                                    <p class="titillium-web-extralight text18 clgr3 mt-2">Zapato UNISEX</p>
+                                </h1>
+
+                                <div class="d-flex flex-row align-items-center mt-2 ">
+                                    <img src="../../recursos/imagenes/icons/estrellaicon.svg" alt="">
+                                    <p class="titillium-web-bold text25 m-0 align-baselin clYellowStar">5</p>
+                                </div>
+                            </div>
+
+                            <div class="column2 align-items-center">
+                                <p class="titillium-web-extralight text18 mb-5 clgr3">5 colores</p>
+                                <h1 class="titillium-web-bold text25 text-black"> $285</h1>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+            <div class="card col-4" id="cardC">
+                <a href="" class="text15">
+                    <div class="image-wrapper2">
+                        <img src="../../recursos/imagenes/sneakersExample.svg" alt="...">
+                    </div>
+                    <div class="lineImgC"></div>
+                    <div class="card-body">
+                        <div class="d-flex flex-row justify-content-between">
+                            <div class="column1 ps-3">
+                                <h1 class="titillium-web-bold text25 text-black">Air Jordan 3
+                                    <p class="titillium-web-extralight text18 clgr3 mt-2">Zapato UNISEX</p>
+                                </h1>
+
+                                <div class="d-flex flex-row align-items-center mt-2 ">
+                                    <img src="../../recursos/imagenes/icons/estrellaicon.svg" alt="">
+                                    <p class="titillium-web-bold text25 m-0 align-baselin clYellowStar">5</p>
+                                </div>
+                            </div>
+
+                            <div class="column2 align-items-center">
+                                <p class="titillium-web-extralight text18 mb-5 clgr3">5 colores</p>
+                                <h1 class="titillium-web-bold text25 text-black"> $285</h1>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+            <div class="card col-4" id="cardC">
+                <a href="" class="text15">
+                    <div class="image-wrapper2">
+                        <img src="../../recursos/imagenes/sneakersExample.svg" alt="...">
+                    </div>
+                    <div class="lineImgC"></div>
+                    <div class="card-body">
+                        <div class="d-flex flex-row justify-content-between">
+                            <div class="column1 ps-3">
+                                <h1 class="titillium-web-bold text25 text-black">Air Jordan 3
+                                    <p class="titillium-web-extralight text18 clgr3 mt-2">Zapato UNISEX</p>
+                                </h1>
+
+                                <div class="d-flex flex-row align-items-center mt-2 ">
+                                    <img src="../../recursos/imagenes/icons/estrellaicon.svg" alt="">
+                                    <p class="titillium-web-bold text25 m-0 align-baselin clYellowStar">5</p>
+                                </div>
+                            </div>
+
+                            <div class="column2 align-items-center">
+                                <p class="titillium-web-extralight text18 mb-5 clgr3">5 colores</p>
+                                <h1 class="titillium-web-bold text25 text-black"> $285</h1>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+            <div class="card col-4" id="cardC">
+                <a href="" class="text15">
+                    <div class="image-wrapper2">
+                        <img src="../../recursos/imagenes/sneakersExample.svg" alt="...">
+                    </div>
+                    <div class="lineImgC"></div>
+                    <div class="card-body">
+                        <div class="d-flex flex-row justify-content-between">
+                            <div class="column1 ps-3">
+                                <h1 class="titillium-web-bold text25 text-black">Air Jordan 3
+                                    <p class="titillium-web-extralight text18 clgr3 mt-2">Zapato UNISEX</p>
+                                </h1>
+
+                                <div class="d-flex flex-row align-items-center mt-2 ">
+                                    <img src="../../recursos/imagenes/icons/estrellaicon.svg" alt="">
+                                    <p class="titillium-web-bold text25 m-0 align-baselin clYellowStar">5</p>
+                                </div>
+                            </div>
+
+                            <div class="column2 align-items-center">
+                                <p class="titillium-web-extralight text18 mb-5 clgr3">5 colores</p>
+                                <h1 class="titillium-web-bold text25 text-black"> $285</h1>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+        </div>
+        <div class="pb-3"></div>
+
     </main>
-
-
 
     <!-- *Llamada a las hojas de estilos del framework e iconos -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
