--- a/vistas/privado/marcas.html
+++ b/vistas/privado/marcas.html
@@ -61,7 +61,7 @@
                     <div class="tab-pane fade show z-3 d-none" role="tabpanel" id="agregar"
                         aria-labelledby="agregar-tab">
                         <!-- Contenedor total de ingreso de datos -->
-                        <div
+                        <form id="AddForm"
                             class="ContenedorTotalA pt-4 d-flex flex-column justify-content-around align-items-center w-100">
                             <!-- Contenedor de datos de la marca -->
                             <div class="contenedorDatos d-flex flex-column align-items-center col-12">
@@ -71,14 +71,14 @@
                                 <div class="col-md-12 col-lg-12 col-sm-12 mb-4">
                                     <label for="nombreMarca" class="form-label text-white text18">Nombre de la
                                         marca</label>
-                                    <input type="text" class="form-control" id="nombreMarca"
+                                    <input type="text" class="form-control" id="nombreMarca" name="nombreMarca"
                                         placeholder="Ingresa el nombre" required>
                                 </div>
                                 <!-- Campo de ingreso de la descripción de la marca -->
                                 <div class="input-group responsiveG">
                                     <span class="input-group-text">Descripción de la marca</span>
                                     <textarea class="form-control" aria-label="With textarea" id="descripcionMarca"
-                                        required></textarea>
+                                        name="descripcionMarca" required></textarea>
                                 </div>
                             </div>
                             <!-- Contenedor de la imagen de la marca -->
@@ -92,7 +92,7 @@
                                 <div class="btn btn-primary btn-rounded mt-3">
                                     <label class="form-label text-white m-1" for="customFile2">Seleccionar
                                         imagen</label>
-                                    <input type="file" class="form-control d-none" id="customFile2"
+                                    <input type="file" class="form-control d-none" id="customFile2" name="customFile2"
                                         onchange="displaySelectedImage(event, 'selectedImage')" />
                                 </div>
                             </div>
@@ -101,16 +101,17 @@
                                 <button type="button" onclick="returnBack()"
                                     class="btn btn2 btn-primary ms-2 shadow text18 titillium-web-regular">Cancelar</button>
                                 <button class="btn btn3 btn-primary shadow ms-2 text18 titillium-web-regular"
-                                    id="btnUpdate" onclick="addSave()" type="button">Guardar</button>
+                                    id="btnUpdate" onclick="addSave()">Guardar</button>
                             </div>
-                        </div>
+                        </form>
                     </div>
                     <!-- Pestaña de visualización de marcas -->
                     <div class="tab-pane1 fade z-2 position-relative d-none" role="tabpanel" id="marcas"
                         aria-labelledby="marcas-tab">
                         <!-- Contenedor de tarjetas de marcas -->
                         <div class="d-flex flex-column mb-3 justify-content-center">
-                            <div class="cardContainer m-5 d-flex flex-wrap gap-5">
+                            <div class="cardContainer m-5 d-flex flex-wrap gap-5 justify-content-lg-center
+                                justify-content-md-start justify-content-start">
                                 <!-- Tarjetas de marcas con imágenes -->
                                 <div class="card sizeCard" ondblclick="openDetails()">
                                     <img src="../../recursos/imagenes/marcas/adidas.svg" class="card-img-top" />
@@ -178,7 +179,8 @@
 
                             <!-- Botones en el pie del modal -->
                             <div class="modal-footer mt-5 d-flex justify-content-center align-items-center">
-                                <div class="contenedorBotones3 gap-3 d-flex align-items-center justify-content-center flex-wrap">
+                                <div
+                                    class="contenedorBotones3 gap-3 d-flex align-items-center justify-content-center flex-wrap">
                                     <!-- Botón para cancelar la operación -->
                                     <button type="button" id="cancelarBtn"
                                         class="btn btn2 btn-primary mx-2 my-0 shadow text18 titillium-web-regular"
